--- a/site/app/views/site/express.html.haml
+++ b/site/app/views/site/express.html.haml
@@ -2,17 +2,17 @@
   .messaging.messaging-home
     .container
       %h1.primary.headline
-        Develop and Scale 
-        %strong#technology-rotate Apps
-        in the Cloud
-      %h2.secondary OpenShift is a free, auto-scaling platform as a service for web applications.  It streamlines the application life cycle so developers can focus on their users, customers, and code.
+        Shift your 
+        %strong#technology-rotate App
+        to the Cloud
+      %h2.secondary Start your journey into the cloud with the answers you need.
 
 %h1.ribbon
-  .ribbon-content What is OpenShift?
+  .ribbon-content What is OpenShift Express?
   .ribbon-left
   
 %h2
-  OpenShift will give you a fast on-ramp to the Cloud. 
+  OpenShift Express will give you a fast on-ramp to the Cloud. 
   Get <strong>Java</strong>, <strong>Ruby</strong>, <strong>PHP</strong>, <strong>Perl</strong> and <strong>Python</strong> apps in the cloud with the command-line and Git in just a few minutes. 
   
 .row
