--- a/site/app/views/styleguide/overview.html.haml
+++ b/site/app/views/styleguide/overview.html.haml
@@ -1,3 +1,4 @@
+- content_for :nav_class, ' lift-counter'
 - content_for :header do
   .messaging
     .container
@@ -13,7 +14,7 @@
   .ribbon-left
 
 %section
-  :plain
+  :markdown
     OpenShift is Red Hat's Cloud Computing Platform-as-a-Service (PaaS) offering.  OpenShift is an application platform in the cloud where application developers and teams can build, test, deploy, and run their applications.  OpenShift takes care of all the infrastructure, middleware, and management and allows the developer to focus on what they do best: designing and coding applications. 
 
     ![OpenShift PaaS Illustration](/app/images/overview-paas.png)
@@ -49,7 +50,7 @@
 
   .row
     .span6
-      :plain
+      :markdown
         ## Code anything.
 
         OpenShift takes a No-Lock-In approach to PaaS by providing built-in support for Node.JS, Ruby, Python, PHP, Perl, and Java (the standard in today's Enterprise).  In addition, OpenShift is extensible with a customizable cartridge functionality that allows enterprising developers to add any other language they wish.  We've seen everything from Clojure to Cobol running on OpenShift.  
@@ -58,7 +59,7 @@
         ![OpenShift Ecosystem Logos](/app/images/overview-ecosystem.png)
 
     .span6
-      :plain
+      :markdown
         ## Blow the doors off your expectations
 
         Once you have your application running in the Cloud, the next thing to worry about is how it is going to handle the massive amount of usage it gets when it goes viral.  Well, no worries here.  OpenShift has you covered.  OpenShift provides both automatic and manual scaling of the resources that are supporting your application so that it will be able to service any volume of activity that you can dream of.  This is one of the sweet benefits of OpenShift PaaS…  you don't need to worry about any infrastructure or middleware issues like administration, tuning, or scaling.  OpenShift handles this for you.  
@@ -67,7 +68,7 @@
 
         ![OpenShift Scaling](/app/images/overview-scaling.png)
 
-  :plain
+  :markdown
     ## Under the Hood.
 
     OpenShift by Red Hat is built on all open-source technologies (we are the leading open source company after all).  A decade of enhancements in these technologies contributed by the open source community has resulted in a set of rock-solid, bullet-proof, super-secure, and high-performing technology components that make OpenShift the best PaaS in the business.
