Chrome/webkit prefixed properties, fix minor bugs with gradients

--- a/site/app/views/layouts/site/_header.html.haml
+++ b/site/app/views/layouts/site/_header.html.haml
@@ -3,13 +3,13 @@
     .pull-left
       = link_to "Sign up for the newsletter »", newsletter_signup_url
     .pull-right.login
-      -if session[:login]
+      -#if session[:login]
         = link_to session[:login], "console", :class => 'btn btn-small'
         = link_to 'Sign out', logout_path, :class => 'btn btn-small'
-      -else
-        = link_to "Sign In", "signin", :class => 'btn btn-small'
+      -# The signin link is always present so we can cache the page
+      = link_to "Sign In to Manage Your Apps", console_path, :class => 'btn btn-small'
 
-      - ['f', 'g', 't'].each do |p|
+      -# ['f', 'g', 't'].each do |p|
         = link_to p, :class => 'btn btn-small login-provider' do
           %img{:alt => p}
 
