--- a/site/app/stylesheets/_navbar.scss
+++ b/site/app/stylesheets/_navbar.scss
@@ -16,10 +16,14 @@
 
   .brand > a > .brand-image {
     -moz-transition: all 0.2s;
+    -webkit-transition: all 0.2s;
+    transition: all 0.2s;
   }
 
   .brand > a:hover > .brand-image {
     -moz-transform: rotate(-10deg);
+    -webkit-transform: rotate(-10deg);
+    transform: rotate(-10deg);
   }
 
   .brand-image {
