--- a/site/app/views/cartridge_types/index.html.haml
+++ b/site/app/views/cartridge_types/index.html.haml
@@ -3,6 +3,10 @@
   .cartridge_type:hover {background-color: #e0e0e0;}
   .cartridge_type:active {background-color: #CC0000; color: white}
   .cartridge_type > ul.meta > li > label {display: inline;}
+  .cartridge_type.installed:hover {background-color: #F5F5F5;}
+  .cartridge_type.installed:active {background-color: #F5F5F5;}
+  .cartridge_type.installed{color:#959595; cursor: auto;}
+  .cartridge_type.installed > h3 {color:#959595 !important;}
 
 %h1.invisible Add a New Cartidge
 = cartridge_wizard_steps_create 0
@@ -10,24 +14,17 @@
   Choose a cartridge to add to your application.
 
 .row
-  - @cart_types.each_slice((@cart_types.length/2.0).ceil).each do |types|
-    .span6
+  - @cart_types.each_slice((@cart_types.length/3.0).ceil).each do |types|
+    .span4
       = render :collection => types, :partial => 'cartridge_types/cartridge_type'
-
--# unless @popular_types.empty
-  .row
-    .span7
-      %h2 Popular Types
-      %p These cartidges have been selected by the OpenShift team to get you started in a hurry. These are good choices when you want to learn more about how OpenShift works.
-      = render @popular_types
-    .span5
-      = yield :cartridges
--# else
-  = yield :cartridges
+  - @installed_cart_types.each_slice((@cart_types.length/3.0).ceil).each do |types|
+    .span4
+      = render :collection => types, :partial => 'cartridge_types/cartridge_type',
+               :locals => {:hide_link => true}
 
 - content_for :javascripts do
   :javascript
-    jQuery('.application_type').click(function() {
+    jQuery('.cartridge_type').click(function() {
       a = $('a.btn', this)[0];
       window.location = a.href
     });
