Reorganization of navbar styles for console, minor hacks to get an approximate look for the old console.  More to come

--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -22,7 +22,7 @@
 @import "bootstrap/mixins";
 @import "ribbon";
 
-@import "navbar";
+@import "site/navbar";
 @import "community";
 
 /* move into core when the branding converges */
