--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -4,7 +4,7 @@
 
 @import "variables";
 @import "bootstrap/variables";
-
+@import "navbar";
 
 /*------------------------------------------------------
 	 Console specific styles
@@ -14,6 +14,15 @@
 	margin-top: 60px;
 	}
 
+.console-transition .navbar {
+  .brand-image {
+    float: left;
+  }
+  .brand-text {
+    float: left;
+    padding: 20px 8px;
+  }
+}
 
 /*	Console overview
 	----------------------------------------------------- */	
