--- a/site/public/stylesheets/site.css
+++ b/site/public/stylesheets/site.css
@@ -48,33 +48,42 @@
      border-left: Xpx solid transparent;
      */ }
 
+/* Common navbar branding */
+/* FIXME: Move common branding in _custom.scss here */
+.navbar .brand {
+  text-transform: uppercase; }
+.navbar .brand > a {
+  display: block; }
+.navbar .brand > a > .brand-image {
+  -moz-transition: all 0.2s;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s; }
+.navbar .brand > a:hover > .brand-image {
+  -moz-transform: rotate(-10deg);
+  -webkit-transform: rotate(-10deg);
+  transform: rotate(-10deg); }
+.navbar .brand-image {
+  content: ' ';
+  /*background-image: url('../images/logo-medium.png') center top no-repeat;
+  height: logoHeight;
+  width: logoWidth;*/ }
+.navbar .brand-text {
+  color: white;
+  text-align: center; }
+
+/* This is site specific branding */
 .navbar {
   margin-bottom: 30px;
   position: relative; }
   .navbar .brand {
-    text-transform: uppercase;
     /* reset styles */
     float: none;
     margin: 0;
     padding: 0; }
-  .navbar .brand > a {
-    display: block; }
-  .navbar .brand > a > .brand-image {
-    -moz-transition: all 0.2s;
-    -webkit-transition: all 0.2s;
-    transition: all 0.2s; }
-  .navbar .brand > a:hover > .brand-image {
-    -moz-transform: rotate(-10deg);
-    -webkit-transform: rotate(-10deg);
-    transform: rotate(-10deg); }
   .navbar .brand-image {
-    content: ' ';
     background: url("../images/logo-medium.png") center top no-repeat transparent;
     height: 90px;
     width: 93px; }
-  .navbar .brand-text {
-    color: white;
-    text-align: center; }
   .navbar .nav {
     font-size: 13px;
     text-transform: uppercase;
