Added Overview and Flex sections to homepage header

--- a/site/app/views/layouts/site/_header.html.haml
+++ b/site/app/views/layouts/site/_header.html.haml
@@ -24,7 +24,7 @@
             %strong> Open
             Shift
       %ul.nav
-        %li.active= link_to "Learn More", ""
+        %li.active= link_to "Learn More", "/app/new/overview"
         %li= link_to "Express", "/app/new/express"
         %li.divider &nbsp;
         %li= link_to "Flex", "/app/new/flex"
