--- a/site/app/stylesheets/_community.scss
+++ b/site/app/stylesheets/_community.scss
@@ -108,6 +108,10 @@
   }
 }
 
+.column-content .picture img {
+  border: 4px solid #000;
+}
+
 .view-user-profile-box .badge { 
   display: inline-block; 
   padding: 0 3px;
