--- a/site/app/stylesheets/_custom.scss
+++ b/site/app/stylesheets/_custom.scss
@@ -539,11 +539,7 @@ input:focus, textarea:focus {
   line-height: 19px;
   color: #999999;
   text-decoration: none;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.8);
-  font-weight: 200;
-  -webkit-border-radius: 3px 3px 0 0;
-  -moz-border-radius: 3px 3px 0 0;
-  border-radius: 3px 3px 0 0;
+  font-weight: normal;
 	}
 .navbar .nav > li > a:hover {
   background-color: transparent;
