--- a/site/app/views/site/signup.html.haml
+++ b/site/app/views/site/signup.html.haml
@@ -59,14 +59,15 @@
             Password
           .controls
             %input(id="pwd_input" type="password" name="password" autocomplete="off" required="true")
-        %input(type="submit" 
-               value="Sign in" 
-               class="btn")
+        %input(type="submit" value="Sign in" class="btn")
                  
-      = semantic_form_for 'web_user', :remote => true, :url => web_user_path, :simple => true do |form|
+      = form_tag(user_request_password_reset_path) do
         %legend
           Lost your password?
-        = form.inputs do
-          = form.input :email_address, :input_html => { :class => 'input-xlarge' }
-          = form.commit_button :label => 'Retrieve password', :button_html => { :class => 'btn' }
+        .control-group
+          %label{:for => 'email_input'}
+            Email
+          .controls
+            %input{:type => "email", :required => true, :name => "email",  :id => "email_input"}
+        %input(type="submit" value="Reset Password" class="btn")
 
