Rename 'take-action' to 'action-call' and add 'action-more' for secondary links.  Update styles for blog to match.

--- a/site/app/views/styleguide/home.html.haml
+++ b/site/app/views/styleguide/home.html.haml
@@ -78,9 +78,9 @@
               %p We pushed a minor Express upgrade today, including some bug fixes and general UI enhancements. We've added a preview section to the app
     .row
       .span6
-        %p.gutter= link_to "Learn about OpenShift...", "learn"
+        %p.gutter= link_to "Learn about OpenShift", "learn", :class => 'action-more'
       .span6
-        %p.gutter= link_to "Read the OpenShift blog...", "blog"
+        %p.gutter= link_to "Read the OpenShift blog", "blog", :class => 'action-more'
 
 #buzz.section-base
   .container.container-inset
