--- a/site/app/views/styleguide/community.html.haml
+++ b/site/app/views/styleguide/community.html.haml
@@ -62,7 +62,7 @@
                 %li.leaf= link_to "MongoDB Resources", "mongodb"
 
               %form.row
-                #search-field
+                .search-row
                   %input.search-query
                   %button.search{:type => 'submit'} 
         
