--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -534,36 +534,38 @@ h1.ribbon {
 		background-color: #181818;
 		color: #fff;
 		background-position: right -43px;
-		}  
-  #search-field {
+		}
+
+  .search-row {
   	position: relative;
   	text-align: right;
 		width: -moz-available;
 		margin-right: -15px;
 		margin-top: 30px;
-		}
-	#search-field .search-query {
-		margin-left: 15px;
-		margin-bottom: 0;
-		padding-left: 13px;
-		padding-right: 30px;
-		color: #ccc;
-		border-radius: 3px;
-		border-width: 0;
-		background-color: #434343;
-    width: inherit;
-		width: -moz-available;
-		}
-	#search-field button.search {
-		right: 3px;
-		width: 25px;
-		background: transparent url("../images/sprite-vert.png") 2px -228px no-repeat;
-    height: 25px;
-    width: 20px;
-    border: 0;
-    position: absolute;
-    top: 1px;
-		}
+
+    .search-query {
+      margin-left: 15px;
+      margin-bottom: 0;
+      padding-left: 13px;
+      padding-right: 30px;
+      color: #ccc;
+      border-radius: 3px;
+      border-width: 0;
+      background-color: #434343;
+      width: inherit;
+      width: -moz-available;
+    }
+    button.search {
+      right: 3px;
+      width: 25px;
+      background: transparent url("../images/sprite-vert.png") 2px -228px no-repeat;
+      height: 25px;
+      width: 20px;
+      border: 0;
+      position: absolute;
+      top: 1px;
+    }
+  }
 }
 
 @media (max-width: 767px) {
