--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -614,6 +614,12 @@ body > header {
     repeat;
 }
 
+@media (max-width: 767px) {
+  body > header {
+    background: #191919 url($transparentNoiseImageData) repeat; 
+  }
+}
+
 /* community background */
 body.community > header {
   background-color: #191919;
@@ -624,6 +630,12 @@ body.community > header {
     repeat-x,
     repeat;
   background-position: center bottom;
+}
+
+@media (max-width: 767px) {
+  body.community > header {
+    background: #191919 url($transparentNoiseImageData) repeat; 
+  }
 }
 
 /* home-specific styles */
@@ -678,7 +690,7 @@ body.home > header {
 
 @media (max-width: 767px) {
   body.home  > header {
-    background: url('../images/dark-gray-diagonal-noise.jpg') repeat;
+    background: #191919 url($transparentNoiseImageData) repeat; 
   }
 
   .home .messaging {
