--- a/site/app/views/site/signin.html.haml
+++ b/site/app/views/site/signin.html.haml
@@ -1,41 +1,24 @@
-- content_for :header do
-  .messaging.messaging-home
-    .container
-      %h1.primary.headline
-        Develop and Scale 
-        %strong#technology-rotate Apps
-        in the Cloud
-      %h2.secondary OpenShift is a free, auto-scaling platform as a service for web applications.  It streamlines the application life cycle so developers can focus on their users, customers, and code.
-
-%h1.ribbon
-  .ribbon-content Sign in and shift your App to the Cloud.
-  .ribbon-left
-  
 - input_html = { :class => input_class } if defined? input_class
 
-#login-form
-  = form_tag(login_ajax_path, :remote => true ) do
-    %input(type="hidden" value="✓" name="utf8")
-    %input{:type => "hidden", :value => form_authenticity_token, :name => "authenticity_token"}
-    
-    %label(for="login_input")
-      Login:
-      %input{:type => "text", :value => session[:confirm_login] ? session[:confirm_login] : '', :name => "login",  :id => "login_input"}
-  
-    
-    %label(for="pwd_input")
-      Password:
-      %input(id="pwd_input"
-           type="password" 
-           name="password" 
-           autocomplete="off")
+%h1.ribbon
+  .ribbon-content Sign in to shift your App to the cloud
+  .ribbon-left
 
-    %input{:type => "hidden", :name => "redirectUrl", :value => @redirectUrl}
-    %input{:type => "hidden", :name => "errorUrl",  :value => @errorUrl}
-    
-    %input(type="submit" 
-           value="Sign in" 
-           class="button")
-
-= render 'layouts/dialogs/extra_options', :page => 'signin'
-
+= form_tag(login_path, :class => 'form-horizontal') do
+  %input(type="hidden" value="✓" name="utf8")
+  %input{:type => "hidden", :value => form_authenticity_token, :name => "authenticity_token"}
+  %input{:type => "hidden", :name => "redirectUrl", :value => (defined?(@redirectUrl) ? :redirectUrl : '/app/new') }
+  %input{:type => "hidden", :name => "errorUrl",  :value => (defined?(@errorUrl) ? :errorUrl : '/app/new/signup') }
+  %fieldset
+    .control-group
+      %label.control-label{:for => 'login_input'}
+        Email
+      .controls
+        %input{:type => "email", :required => true, :placeholder => 'Your redhat.com or RHN account', :value => session[:confirm_login] ? session[:confirm_login] : '', :name => "login",  :id => "login_input"}
+    .control-group
+      %label.control-label{:for => 'pwd_input'}
+        Password
+      .controls
+        %input(id="pwd_input" type="password" name="password" autocomplete="off" required="true")
+    .form-actions
+      %input(type="submit" value="Sign in" class="btn")
