--- a/site/app/views/site/signup.html.haml
+++ b/site/app/views/site/signup.html.haml
@@ -1,73 +1,29 @@
-- content_for :header do
-  .messaging.messaging-home
-    .container
-      %h1.primary.headline
-        Develop and Scale 
-        %strong#technology-rotate Apps
-        in the Cloud
-      %h2.secondary OpenShift is a free, auto-scaling platform as a service for web applications.  It streamlines the application life cycle so developers can focus on their users, customers, and code.
-
 %h1.ribbon
-  .ribbon-content Ready to shift your App to the Cloud?
+  .ribbon-content Sign up for a new account
   .ribbon-left
   
 - input_html = { :class => input_class } if defined? input_class
 
-#signup-and-signin
-  .row
-    .span6
-    
-      = semantic_form_for 'web_user', :remote => true, :url => web_user_path, :simple => true do |form|
-        %legend
-          Sign up for a new account
-        = form.inputs do
-          = form.hidden_field :cloud_access_choice,
-            :value => (@product == CloudAccess::FLEX_NAME ? CloudAccess::FLEX : CloudAccess::EXPRESS)
-          = form.input :email_address, :input_html => { :type => 'email', :required => 'true', :class => 'input-xlarge', :placeholder => 'Enter a valid email address' }
-          = form.input :password, :input_html => { :required => 'true', :class => 'input-xlarge', :autocomplete => 'off', :placeholder => 'At least 6 characters', :maxlength => '50' }
-          = form.input :password_confirmation, :input_html => { :required => 'true', :class => 'input-xlarge', :autocomplete => 'off', :placeholder => 'Enter it again', :maxlength => '50' }
-          = form.input :promo_code, :label => 'Promotional Code', :required => false, :input_html => { :class => 'input-xlarge' }
-          .control-group
-            %label.control-label
-              Are you human?
-            .controls.recaptcha
-              = recaptcha_tags :ssl => true    
-          .control-group
-            By signing up you agree to the 
-            %a{:href => '#'} 
-              Terms of Service 
-            and the
-            %a{:href => '#'} 
-              Privacy Policy
-          = form.commit_button :label => 'Sign up for OpenShift »'
+= semantic_form_for 'web_user', :url => web_user_path, :simple => true, :html => {:class => 'form-horizontal'} do |form|
+  %input{:type => "hidden", :name => "redirectUrl", :value => (defined?(@redirectUrl) ? :redirectUrl : '/app/new') }
+  = form.inputs do
+    = form.hidden_field :cloud_access_choice, :value => (@product == CloudAccess::FLEX_NAME ? CloudAccess::FLEX : CloudAccess::EXPRESS)
+    = form.input :email_address, :input_html => { :type => 'email', :required => 'true', :class => 'input-xlarge', :placeholder => 'Enter a valid email address' }
+    = form.input :password, :input_html => { :required => 'true', :class => 'input-xlarge', :autocomplete => 'off', :placeholder => 'At least 6 characters', :maxlength => '50' }
+    = form.input :password_confirmation, :input_html => { :required => 'true', :class => 'input-xlarge', :autocomplete => 'off', :placeholder => 'Enter it again', :maxlength => '50' }
+    = form.input :promo_code, :label => 'Promotional Code', :required => false, :input_html => { :class => 'input-xlarge' }
+    .control-group
+      %label.control-label
+        Are you human?
+      .controls.recaptcha
+        = recaptcha_tags :ssl => true    
+    .control-group
+      By signing up you agree to the 
+      %a{:href => '#'} 
+        Terms of Service 
+      and the
+      %a{:href => '#'} 
+        Privacy Policy
+    .form-actions
+      = form.commit_button :label => 'Sign Up for OpenShift »'
           
-    .span6
-      = form_tag(login_path) do
-        %input(type="hidden" value="✓" name="utf8")
-        %input{:type => "hidden", :value => form_authenticity_token, :name => "authenticity_token"}
-        %input{:type => "hidden", :name => "redirectUrl", :value => (defined?(@redirectUrl) ? :redirectUrl : '/app/new') }
-        %input{:type => "hidden", :name => "errorUrl",  :value => (defined?(@errorUrl) ? :errorUrl : '/app/new/signup') }
-        %legend
-          Already have a Red Hat account?
-        .control-group
-          %label{:for => 'login_input'}
-            Email
-          .controls
-            %input{:type => "email", :required => true, :value => session[:confirm_login] ? session[:confirm_login] : '', :name => "login",  :id => "login_input"}
-        .control-group
-          %label{:for => 'pwd_input'}
-            Password
-          .controls
-            %input(id="pwd_input" type="password" name="password" autocomplete="off" required="true")
-        %input(type="submit" value="Sign in" class="btn")
-                 
-      = form_tag(user_request_password_reset_path) do
-        %legend
-          Lost your password?
-        .control-group
-          %label{:for => 'email_input'}
-            Email
-          .controls
-            %input{:type => "email", :required => true, :name => "email",  :id => "email_input"}
-        %input(type="submit" value="Reset Password" class="btn")
-
