--- a/site/app/views/layouts/site/_header.html.haml
+++ b/site/app/views/layouts/site/_header.html.haml
@@ -7,7 +7,7 @@
         = link_to session[:login], "console", :class => 'btn btn-small'
         = link_to 'Sign out', logout_path, :class => 'btn btn-small'
       -# The signin link is always present so we can cache the page
-      = link_to "Sign In to Manage Your Apps", console_path, :class => 'btn btn-small'
+      = link_to "Sign In to Manage Your Apps", "/app/new/signin", :class => 'btn btn-small'
 
       -# ['f', 'g', 't'].each do |p|
         = link_to p, :class => 'btn btn-small login-provider' do
