Update logo for console site to match branding guidelines (roughly), still needs lots of love.

--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -19,8 +19,10 @@
     float: left;
   }
   .brand-text {
+    font-size: 24px;
+    line-height: 1em;
     float: left;
-    padding: 20px 8px;
+    padding: 4px 0;
   }
 }
 
