--- a/site/app/views/layouts/console/_header.html.haml
+++ b/site/app/views/layouts/console/_header.html.haml
@@ -4,7 +4,7 @@
 
       .brand
         = link_to root_path do
-          %img.brand-image{:src => image_path('/app/images/logo-64.png')}
+          %img.brand-image{:src => image_path('/app/images/logo-24-inside.png')}
           .brand-text 
             %strong> Open
             Shift
